version/0.3/_sources/api/ansys/sam/sysml2/meta_model/definition/Definition.rst.txt






:class:`Definition`
===================


.. py:class:: ansys.sam.sysml2.meta_model.definition.Definition(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.classifier.Classifier`


   
   Java class 'com.ansys.medini.metamodel.sysml.Definition'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Definition

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~variant`
            - Get the variant property.
          * - :py:attr:`~owned_use_case`
            - Get the owned use case property.
          * - :py:attr:`~owned_item`
            - Get the owned item property.
          * - :py:attr:`~owned_view`
            - Get the owned view property.
          * - :py:attr:`~owned_transition`
            - Get the owned transition property.
          * - :py:attr:`~owned_constraint`
            - Get the owned constraint property.
          * - :py:attr:`~owned_state`
            - Get the owned state property.
          * - :py:attr:`~owned_reference`
            - Get the owned reference property.
          * - :py:attr:`~owned_metadata`
            - Get the owned metadata property.
          * - :py:attr:`~owned_flow`
            - Get the owned flow property.
          * - :py:attr:`~owned_occurrence`
            - Get the owned occurrence property.
          * - :py:attr:`~owned_interface`
            - Get the owned interface property.
          * - :py:attr:`~owned_action`
            - Get the owned action property.
          * - :py:attr:`~owned_allocation`
            - Get the owned allocation property.
          * - :py:attr:`~owned_attribute`
            - Get the owned attribute property.
          * - :py:attr:`~owned_case`
            - Get the owned case property.
          * - :py:attr:`~owned_usage`
            - Get the owned usage property.
          * - :py:attr:`~owned_connection`
            - Get the owned connection property.
          * - :py:attr:`~owned_part`
            - Get the owned part property.
          * - :py:attr:`~owned_port`
            - Get the owned port property.
          * - :py:attr:`~variant_membership`
            - Get the variant membership property.
          * - :py:attr:`~is_variation`
            - Get the is variation property.
          * - :py:attr:`~owned_calculation`
            - Get the owned calculation property.
          * - :py:attr:`~owned_analysis_case`
            - Get the owned analysis case property.
          * - :py:attr:`~owned_verification_case`
            - Get the owned verification case property.
          * - :py:attr:`~owned_requirement`
            - Get the owned requirement property.
          * - :py:attr:`~owned_enumeration`
            - Get the owned enumeration property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.definition import Definition

Property detail
---------------

.. py:property:: variant
   :type: list[Usage]


   
   Get the variant property.





   :Returns:

       :class:`python:list`\["Usage"]
           Value of property variant.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_use_case
   :type: list[UseCaseUsage]


   
   Get the owned use case property.





   :Returns:

       :class:`python:list`\["UseCaseUsage"]
           Value of property owned use case.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_item
   :type: list[ItemUsage]


   
   Get the owned item property.





   :Returns:

       :class:`python:list`\["ItemUsage"]
           Value of property owned item.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_view
   :type: list[ViewUsage]


   
   Get the owned view property.





   :Returns:

       :class:`python:list`\["ViewUsage"]
           Value of property owned view.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_transition
   :type: list[TransitionUsage]


   
   Get the owned transition property.





   :Returns:

       :class:`python:list`\["TransitionUsage"]
           Value of property owned transition.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_constraint
   :type: list[ConstraintUsage]


   
   Get the owned constraint property.





   :Returns:

       :class:`python:list`\["ConstraintUsage"]
           Value of property owned constraint.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_state
   :type: list[StateUsage]


   
   Get the owned state property.





   :Returns:

       :class:`python:list`\["StateUsage"]
           Value of property owned state.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_reference
   :type: list[ReferenceUsage]


   
   Get the owned reference property.





   :Returns:

       :class:`python:list`\["ReferenceUsage"]
           Value of property owned reference.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_metadata
   :type: list[MetadataUsage]


   
   Get the owned metadata property.





   :Returns:

       :class:`python:list`\["MetadataUsage"]
           Value of property owned metadata.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_flow
   :type: list[FlowConnectionUsage]


   
   Get the owned flow property.





   :Returns:

       :class:`python:list`\["FlowConnectionUsage"]
           Value of property owned flow.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_occurrence
   :type: list[OccurrenceUsage]


   
   Get the owned occurrence property.





   :Returns:

       :class:`python:list`\["OccurrenceUsage"]
           Value of property owned occurrence.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_interface
   :type: list[InterfaceUsage]


   
   Get the owned interface property.





   :Returns:

       :class:`python:list`\["InterfaceUsage"]
           Value of property owned interface.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_action
   :type: list[ActionUsage]


   
   Get the owned action property.





   :Returns:

       :class:`python:list`\["ActionUsage"]
           Value of property owned action.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_allocation
   :type: list[AllocationUsage]


   
   Get the owned allocation property.





   :Returns:

       :class:`python:list`\["AllocationUsage"]
           Value of property owned allocation.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_attribute
   :type: list[AttributeUsage]


   
   Get the owned attribute property.





   :Returns:

       :class:`python:list`\["AttributeUsage"]
           Value of property owned attribute.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_case
   :type: list[CaseUsage]


   
   Get the owned case property.





   :Returns:

       :class:`python:list`\["CaseUsage"]
           Value of property owned case.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_usage
   :type: list[Usage]


   
   Get the owned usage property.





   :Returns:

       :class:`python:list`\["Usage"]
           Value of property owned usage.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_connection
   :type: list[ConnectorAsUsage]


   
   Get the owned connection property.





   :Returns:

       :class:`python:list`\["ConnectorAsUsage"]
           Value of property owned connection.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_part
   :type: list[PartUsage]


   
   Get the owned part property.





   :Returns:

       :class:`python:list`\["PartUsage"]
           Value of property owned part.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_port
   :type: list[PortUsage]


   
   Get the owned port property.





   :Returns:

       :class:`python:list`\["PortUsage"]
           Value of property owned port.











   ..
       !! processed by numpydoc !!

.. py:property:: variant_membership
   :type: list[VariantMembership]


   
   Get the variant membership property.





   :Returns:

       :class:`python:list`\["VariantMembership"]
           Value of property variant membership.











   ..
       !! processed by numpydoc !!

.. py:property:: is_variation
   :type: bool


   
   Get the is variation property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property is variation.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_calculation
   :type: list[CalculationUsage]


   
   Get the owned calculation property.





   :Returns:

       :class:`python:list`\["CalculationUsage"]
           Value of property owned calculation.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_analysis_case
   :type: list[AnalysisCaseUsage]


   
   Get the owned analysis case property.





   :Returns:

       :class:`python:list`\["AnalysisCaseUsage"]
           Value of property owned analysis case.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_verification_case
   :type: list[VerificationCaseUsage]


   
   Get the owned verification case property.





   :Returns:

       :class:`python:list`\["VerificationCaseUsage"]
           Value of property owned verification case.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_requirement
   :type: list[RequirementUsage]


   
   Get the owned requirement property.





   :Returns:

       :class:`python:list`\["RequirementUsage"]
           Value of property owned requirement.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_enumeration
   :type: list[EnumerationUsage]


   
   Get the owned enumeration property.





   :Returns:

       :class:`python:list`\["EnumerationUsage"]
           Value of property owned enumeration.











   ..
       !! processed by numpydoc !!






